homework/principle-of-compiling/v2/parse.output
Terminals unused in grammar

   YY_G
   YY_L


Grammar

    0 $accept: start $end

    1 start: start lines ';'
    2      | start ';'
    3      | error ';'
    4      | %empty

    5 lines: create_stmt
    6      | drop_stmt
    7      | show_stmt
    8      | use_stmt
    9      | exit_stmt
   10      | select_stmt
   11      | insert_stmt
   12      | update_stmt
   13      | delete_stmt

   14 create_stmt: CREATE DATABASE database_name
   15            | CREATE TABLE table_name '(' column_type_list ')'
   16            | CREATE TABLE table_name

   17 drop_stmt: DROP DATABASE database_name
   18          | DROP TABLE table_name

   19 show_stmt: SHOW DATABASES
   20          | SHOW TABLES

   21 use_stmt: USE database_name

   22 exit_stmt: EXIT

   23 select_stmt: SELECT '*' FROM table_name
   24            | SELECT column_list FROM table_name
   25            | SELECT '*' FROM table_name WHERE condition_expr
   26            | SELECT column_list FROM table_name WHERE condition_expr

   27 insert_stmt: INSERT INTO table_name VALUES '(' value_list ')'
   28            | INSERT INTO table_name '(' column_list ')' VALUES '(' value_list ')'

   29 update_stmt: UPDATE table_name SET assign_expr_list WHERE condition_expr

   30 delete_stmt: DELETE FROM table_name WHERE condition_expr

   31 column_type_list: column_type_list ',' column DATATYPE
   32                 | column DATATYPE

   33 column_list: column_list ',' column
   34            | column

   35 value_list: value_list ',' expr_int
   36           | value_list ',' expr_float
   37           | value_list ',' expr_string
   38           | expr_int
   39           | expr_float
   40           | expr_string

   41 assign_expr_list: assign_expr_list ',' column '=' expr_float
   42                 | assign_expr_list ',' column '=' expr_int
   43                 | assign_expr_list ',' column '=' expr_string
   44                 | column '=' expr_float
   45                 | column '=' expr_int
   46                 | column '=' expr_string

   47 condition_expr: condition_expr YY_AND condition_expr
   48               | condition_expr YY_OR condition_expr
   49               | YY_NOT condition_expr
   50               | '(' condition_expr ')'
   51               | condition_expr_leaf

   52 condition_expr_leaf: column YY_GG expr_float
   53                    | column YY_GE expr_float
   54                    | column YY_IS expr_float
   55                    | column YY_LL expr_float
   56                    | column YY_LE expr_float
   57                    | column YY_NE expr_float
   58                    | column YY_GG expr_int
   59                    | column YY_GE expr_int
   60                    | column YY_IS expr_int
   61                    | column YY_LL expr_int
   62                    | column YY_LE expr_int
   63                    | column YY_NE expr_int
   64                    | column YY_GG expr_string
   65                    | column YY_GE expr_string
   66                    | column YY_IS expr_string
   67                    | column YY_LL expr_string
   68                    | column YY_LE expr_string
   69                    | column YY_NE expr_string

   70 expr_float: NUMF
   71           | expr_float '+' expr_float
   72           | expr_float '+' expr_int
   73           | expr_int '+' expr_float
   74           | expr_float '-' expr_float
   75           | expr_float '-' expr_int
   76           | expr_int '-' expr_float
   77           | expr_float '*' expr_float
   78           | expr_float '*' expr_int
   79           | expr_int '*' expr_float
   80           | expr_float '/' expr_float
   81           | expr_float '/' expr_int
   82           | expr_int '/' expr_float
   83           | '(' expr_float ')'
   84           | '-' expr_float
   85           | '+' expr_float
   86           | expr_float '^' expr_float
   87           | expr_float '^' expr_int
   88           | expr_int '^' expr_float
   89           | expr_int '^' expr_int

   90 expr_int: NUMI
   91         | expr_int '+' expr_int
   92         | expr_int '-' expr_int
   93         | expr_int '*' expr_int
   94         | expr_int '/' expr_int
   95         | expr_int '%' expr_int
   96         | '(' expr_int ')'
   97         | '-' expr_int
   98         | '+' expr_int

   99 expr_string: YY_STRING

  100 database_name: name

  101 table_name: name

  102 column: name

  103 name: ID


Terminals, with rules where they appear

$end (0) 0
'%' (37) 95
'(' (40) 15 27 28 50 83 96
')' (41) 15 27 28 50 83 96
'*' (42) 23 25 77 78 79 93
'+' (43) 71 72 73 85 91 98
',' (44) 31 33 35 36 37 41 42 43
'-' (45) 74 75 76 84 92 97
'/' (47) 80 81 82 94
';' (59) 1 2 3
'=' (61) 41 42 43 44 45 46
'^' (94) 86 87 88 89
error (256) 3
CREATE (258) 14 15 16
DELETE (259) 30
DROP (260) 17 18
EXIT (261) 22
INSERT (262) 27 28
SELECT (263) 23 24 25 26
SHOW (264) 19 20
UPDATE (265) 29
DATABASE (266) 14 17
DATABASES (267) 19
FROM (268) 23 24 25 26 30
INTO (269) 27 28
SET (270) 29
TABLE (271) 15 16 18
TABLES (272) 20
USE (273) 21
WHERE (274) 25 26 29 30
VALUES (275) 27 28
YY_AND (276) 47
YY_OR (277) 48
YY_NOT (278) 49
YY_GG (279) 52 58 64
YY_GE (280) 53 59 65
YY_LL (281) 55 61 67
YY_LE (282) 56 62 68
YY_IS (283) 54 60 66
YY_NE (284) 57 63 69
ID (285) 103
DATATYPE (286) 31 32
YY_STRING (287) 99
NUMI (288) 90
NUMF (289) 70
YY_G (290)
YY_L (291)
UMINUS (292)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
start (50)
    on left: 1 2 3 4, on right: 0 1 2
lines (51)
    on left: 5 6 7 8 9 10 11 12 13, on right: 1
create_stmt (52)
    on left: 14 15 16, on right: 5
drop_stmt (53)
    on left: 17 18, on right: 6
show_stmt (54)
    on left: 19 20, on right: 7
use_stmt (55)
    on left: 21, on right: 8
exit_stmt (56)
    on left: 22, on right: 9
select_stmt (57)
    on left: 23 24 25 26, on right: 10
insert_stmt (58)
    on left: 27 28, on right: 11
update_stmt (59)
    on left: 29, on right: 12
delete_stmt (60)
    on left: 30, on right: 13
column_type_list (61)
    on left: 31 32, on right: 15 31
column_list (62)
    on left: 33 34, on right: 24 26 28 33
value_list (63)
    on left: 35 36 37 38 39 40, on right: 27 28 35 36 37
assign_expr_list (64)
    on left: 41 42 43 44 45 46, on right: 29 41 42 43
condition_expr (65)
    on left: 47 48 49 50 51, on right: 25 26 29 30 47 48 49 50
condition_expr_leaf (66)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69,
    on right: 51
expr_float (67)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89, on right: 36 39 41 44 52 53 54 55 56 57 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88
expr_int (68)
    on left: 90 91 92 93 94 95 96 97 98, on right: 35 38 42 45 58 59
    60 61 62 63 72 73 75 76 78 79 81 82 87 88 89 91 92 93 94 95 96
    97 98
expr_string (69)
    on left: 99, on right: 37 40 43 46 64 65 66 67 68 69
database_name (70)
    on left: 100, on right: 14 17 21
table_name (71)
    on left: 101, on right: 15 16 18 23 24 25 26 27 28 29 30
column (72)
    on left: 102, on right: 31 32 33 34 41 42 43 44 45 46 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
name (73)
    on left: 103, on right: 100 101 102


State 0

    0 $accept: . start $end

    error  shift, and go to state 1

    $end    reduce using rule 4 (start)
    CREATE  reduce using rule 4 (start)
    DELETE  reduce using rule 4 (start)
    DROP    reduce using rule 4 (start)
    EXIT    reduce using rule 4 (start)
    INSERT  reduce using rule 4 (start)
    SELECT  reduce using rule 4 (start)
    SHOW    reduce using rule 4 (start)
    UPDATE  reduce using rule 4 (start)
    USE     reduce using rule 4 (start)
    ';'     reduce using rule 4 (start)

    start  go to state 2


State 1

    3 start: error . ';'

    ';'  shift, and go to state 3


State 2

    0 $accept: start . $end
    1 start: start . lines ';'
    2      | start . ';'

    $end    shift, and go to state 4
    CREATE  shift, and go to state 5
    DELETE  shift, and go to state 6
    DROP    shift, and go to state 7
    EXIT    shift, and go to state 8
    INSERT  shift, and go to state 9
    SELECT  shift, and go to state 10
    SHOW    shift, and go to state 11
    UPDATE  shift, and go to state 12
    USE     shift, and go to state 13
    ';'     shift, and go to state 14

    lines        go to state 15
    create_stmt  go to state 16
    drop_stmt    go to state 17
    show_stmt    go to state 18
    use_stmt     go to state 19
    exit_stmt    go to state 20
    select_stmt  go to state 21
    insert_stmt  go to state 22
    update_stmt  go to state 23
    delete_stmt  go to state 24


State 3

    3 start: error ';' .

    $default  reduce using rule 3 (start)


State 4

    0 $accept: start $end .

    $default  accept


State 5

   14 create_stmt: CREATE . DATABASE database_name
   15            | CREATE . TABLE table_name '(' column_type_list ')'
   16            | CREATE . TABLE table_name

    DATABASE  shift, and go to state 25
    TABLE     shift, and go to state 26


State 6

   30 delete_stmt: DELETE . FROM table_name WHERE condition_expr

    FROM  shift, and go to state 27


State 7

   17 drop_stmt: DROP . DATABASE database_name
   18          | DROP . TABLE table_name

    DATABASE  shift, and go to state 28
    TABLE     shift, and go to state 29


State 8

   22 exit_stmt: EXIT .

    $default  reduce using rule 22 (exit_stmt)


State 9

   27 insert_stmt: INSERT . INTO table_name VALUES '(' value_list ')'
   28            | INSERT . INTO table_name '(' column_list ')' VALUES '(' value_list ')'

    INTO  shift, and go to state 30


State 10

   23 select_stmt: SELECT . '*' FROM table_name
   24            | SELECT . column_list FROM table_name
   25            | SELECT . '*' FROM table_name WHERE condition_expr
   26            | SELECT . column_list FROM table_name WHERE condition_expr

    ID   shift, and go to state 31
    '*'  shift, and go to state 32

    column_list  go to state 33
    column       go to state 34
    name         go to state 35


State 11

   19 show_stmt: SHOW . DATABASES
   20          | SHOW . TABLES

    DATABASES  shift, and go to state 36
    TABLES     shift, and go to state 37


State 12

   29 update_stmt: UPDATE . table_name SET assign_expr_list WHERE condition_expr

    ID  shift, and go to state 31

    table_name  go to state 38
    name        go to state 39


State 13

   21 use_stmt: USE . database_name

    ID  shift, and go to state 31

    database_name  go to state 40
    name           go to state 41


State 14

    2 start: start ';' .

    $default  reduce using rule 2 (start)


State 15

    1 start: start lines . ';'

    ';'  shift, and go to state 42


State 16

    5 lines: create_stmt .

    $default  reduce using rule 5 (lines)


State 17

    6 lines: drop_stmt .

    $default  reduce using rule 6 (lines)


State 18

    7 lines: show_stmt .

    $default  reduce using rule 7 (lines)


State 19

    8 lines: use_stmt .

    $default  reduce using rule 8 (lines)


State 20

    9 lines: exit_stmt .

    $default  reduce using rule 9 (lines)


State 21

   10 lines: select_stmt .

    $default  reduce using rule 10 (lines)


State 22

   11 lines: insert_stmt .

    $default  reduce using rule 11 (lines)


State 23

   12 lines: update_stmt .

    $default  reduce using rule 12 (lines)


State 24

   13 lines: delete_stmt .

    $default  reduce using rule 13 (lines)


State 25

   14 create_stmt: CREATE DATABASE . database_name

    ID  shift, and go to state 31

    database_name  go to state 43
    name           go to state 41


State 26

   15 create_stmt: CREATE TABLE . table_name '(' column_type_list ')'
   16            | CREATE TABLE . table_name

    ID  shift, and go to state 31

    table_name  go to state 44
    name        go to state 39


State 27

   30 delete_stmt: DELETE FROM . table_name WHERE condition_expr

    ID  shift, and go to state 31

    table_name  go to state 45
    name        go to state 39


State 28

   17 drop_stmt: DROP DATABASE . database_name

    ID  shift, and go to state 31

    database_name  go to state 46
    name           go to state 41


State 29

   18 drop_stmt: DROP TABLE . table_name

    ID  shift, and go to state 31

    table_name  go to state 47
    name        go to state 39


State 30

   27 insert_stmt: INSERT INTO . table_name VALUES '(' value_list ')'
   28            | INSERT INTO . table_name '(' column_list ')' VALUES '(' value_list ')'

    ID  shift, and go to state 31

    table_name  go to state 48
    name        go to state 39


State 31

  103 name: ID .

    $default  reduce using rule 103 (name)


State 32

   23 select_stmt: SELECT '*' . FROM table_name
   25            | SELECT '*' . FROM table_name WHERE condition_expr

    FROM  shift, and go to state 49


State 33

   24 select_stmt: SELECT column_list . FROM table_name
   26            | SELECT column_list . FROM table_name WHERE condition_expr
   33 column_list: column_list . ',' column

    FROM  shift, and go to state 50
    ','   shift, and go to state 51


State 34

   34 column_list: column .

    $default  reduce using rule 34 (column_list)


State 35

  102 column: name .

    $default  reduce using rule 102 (column)


State 36

   19 show_stmt: SHOW DATABASES .

    $default  reduce using rule 19 (show_stmt)


State 37

   20 show_stmt: SHOW TABLES .

    $default  reduce using rule 20 (show_stmt)


State 38

   29 update_stmt: UPDATE table_name . SET assign_expr_list WHERE condition_expr

    SET  shift, and go to state 52


State 39

  101 table_name: name .

    $default  reduce using rule 101 (table_name)


State 40

   21 use_stmt: USE database_name .

    $default  reduce using rule 21 (use_stmt)


State 41

  100 database_name: name .

    $default  reduce using rule 100 (database_name)


State 42

    1 start: start lines ';' .

    $default  reduce using rule 1 (start)


State 43

   14 create_stmt: CREATE DATABASE database_name .

    $default  reduce using rule 14 (create_stmt)


State 44

   15 create_stmt: CREATE TABLE table_name . '(' column_type_list ')'
   16            | CREATE TABLE table_name .

    '('  shift, and go to state 53

    $default  reduce using rule 16 (create_stmt)


State 45

   30 delete_stmt: DELETE FROM table_name . WHERE condition_expr

    WHERE  shift, and go to state 54


State 46

   17 drop_stmt: DROP DATABASE database_name .

    $default  reduce using rule 17 (drop_stmt)


State 47

   18 drop_stmt: DROP TABLE table_name .

    $default  reduce using rule 18 (drop_stmt)


State 48

   27 insert_stmt: INSERT INTO table_name . VALUES '(' value_list ')'
   28            | INSERT INTO table_name . '(' column_list ')' VALUES '(' value_list ')'

    VALUES  shift, and go to state 55
    '('     shift, and go to state 56


State 49

   23 select_stmt: SELECT '*' FROM . table_name
   25            | SELECT '*' FROM . table_name WHERE condition_expr

    ID  shift, and go to state 31

    table_name  go to state 57
    name        go to state 39


State 50

   24 select_stmt: SELECT column_list FROM . table_name
   26            | SELECT column_list FROM . table_name WHERE condition_expr

    ID  shift, and go to state 31

    table_name  go to state 58
    name        go to state 39


State 51

   33 column_list: column_list ',' . column

    ID  shift, and go to state 31

    column  go to state 59
    name    go to state 35


State 52

   29 update_stmt: UPDATE table_name SET . assign_expr_list WHERE condition_expr

    ID  shift, and go to state 31

    assign_expr_list  go to state 60
    column            go to state 61
    name              go to state 35


State 53

   15 create_stmt: CREATE TABLE table_name '(' . column_type_list ')'

    ID  shift, and go to state 31

    column_type_list  go to state 62
    column            go to state 63
    name              go to state 35


State 54

   30 delete_stmt: DELETE FROM table_name WHERE . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 66
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 55

   27 insert_stmt: INSERT INTO table_name VALUES . '(' value_list ')'

    '('  shift, and go to state 69


State 56

   28 insert_stmt: INSERT INTO table_name '(' . column_list ')' VALUES '(' value_list ')'

    ID  shift, and go to state 31

    column_list  go to state 70
    column       go to state 34
    name         go to state 35


State 57

   23 select_stmt: SELECT '*' FROM table_name .
   25            | SELECT '*' FROM table_name . WHERE condition_expr

    WHERE  shift, and go to state 71

    $default  reduce using rule 23 (select_stmt)


State 58

   24 select_stmt: SELECT column_list FROM table_name .
   26            | SELECT column_list FROM table_name . WHERE condition_expr

    WHERE  shift, and go to state 72

    $default  reduce using rule 24 (select_stmt)


State 59

   33 column_list: column_list ',' column .

    $default  reduce using rule 33 (column_list)


State 60

   29 update_stmt: UPDATE table_name SET assign_expr_list . WHERE condition_expr
   41 assign_expr_list: assign_expr_list . ',' column '=' expr_float
   42                 | assign_expr_list . ',' column '=' expr_int
   43                 | assign_expr_list . ',' column '=' expr_string

    WHERE  shift, and go to state 73
    ','    shift, and go to state 74


State 61

   44 assign_expr_list: column . '=' expr_float
   45                 | column . '=' expr_int
   46                 | column . '=' expr_string

    '='  shift, and go to state 75


State 62

   15 create_stmt: CREATE TABLE table_name '(' column_type_list . ')'
   31 column_type_list: column_type_list . ',' column DATATYPE

    ','  shift, and go to state 76
    ')'  shift, and go to state 77


State 63

   32 column_type_list: column . DATATYPE

    DATATYPE  shift, and go to state 78


State 64

   49 condition_expr: YY_NOT . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 79
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 65

   50 condition_expr: '(' . condition_expr ')'

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 80
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 66

   30 delete_stmt: DELETE FROM table_name WHERE condition_expr .
   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr

    YY_AND  shift, and go to state 81
    YY_OR   shift, and go to state 82

    $default  reduce using rule 30 (delete_stmt)


State 67

   51 condition_expr: condition_expr_leaf .

    $default  reduce using rule 51 (condition_expr)


State 68

   52 condition_expr_leaf: column . YY_GG expr_float
   53                    | column . YY_GE expr_float
   54                    | column . YY_IS expr_float
   55                    | column . YY_LL expr_float
   56                    | column . YY_LE expr_float
   57                    | column . YY_NE expr_float
   58                    | column . YY_GG expr_int
   59                    | column . YY_GE expr_int
   60                    | column . YY_IS expr_int
   61                    | column . YY_LL expr_int
   62                    | column . YY_LE expr_int
   63                    | column . YY_NE expr_int
   64                    | column . YY_GG expr_string
   65                    | column . YY_GE expr_string
   66                    | column . YY_IS expr_string
   67                    | column . YY_LL expr_string
   68                    | column . YY_LE expr_string
   69                    | column . YY_NE expr_string

    YY_GG  shift, and go to state 83
    YY_GE  shift, and go to state 84
    YY_LL  shift, and go to state 85
    YY_LE  shift, and go to state 86
    YY_IS  shift, and go to state 87
    YY_NE  shift, and go to state 88


State 69

   27 insert_stmt: INSERT INTO table_name VALUES '(' . value_list ')'

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    value_list   go to state 95
    expr_float   go to state 96
    expr_int     go to state 97
    expr_string  go to state 98


State 70

   28 insert_stmt: INSERT INTO table_name '(' column_list . ')' VALUES '(' value_list ')'
   33 column_list: column_list . ',' column

    ','  shift, and go to state 51
    ')'  shift, and go to state 99


State 71

   25 select_stmt: SELECT '*' FROM table_name WHERE . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 100
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 72

   26 select_stmt: SELECT column_list FROM table_name WHERE . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 101
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 73

   29 update_stmt: UPDATE table_name SET assign_expr_list WHERE . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 102
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 74

   41 assign_expr_list: assign_expr_list ',' . column '=' expr_float
   42                 | assign_expr_list ',' . column '=' expr_int
   43                 | assign_expr_list ',' . column '=' expr_string

    ID  shift, and go to state 31

    column  go to state 103
    name    go to state 35


State 75

   44 assign_expr_list: column '=' . expr_float
   45                 | column '=' . expr_int
   46                 | column '=' . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 104
    expr_int     go to state 105
    expr_string  go to state 106


State 76

   31 column_type_list: column_type_list ',' . column DATATYPE

    ID  shift, and go to state 31

    column  go to state 107
    name    go to state 35


State 77

   15 create_stmt: CREATE TABLE table_name '(' column_type_list ')' .

    $default  reduce using rule 15 (create_stmt)


State 78

   32 column_type_list: column DATATYPE .

    $default  reduce using rule 32 (column_type_list)


State 79

   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr
   49               | YY_NOT condition_expr .

    $default  reduce using rule 49 (condition_expr)


State 80

   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr
   50               | '(' condition_expr . ')'

    YY_AND  shift, and go to state 81
    YY_OR   shift, and go to state 82
    ')'     shift, and go to state 108


State 81

   47 condition_expr: condition_expr YY_AND . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 109
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 82

   48 condition_expr: condition_expr YY_OR . condition_expr

    YY_NOT  shift, and go to state 64
    ID      shift, and go to state 31
    '('     shift, and go to state 65

    condition_expr       go to state 110
    condition_expr_leaf  go to state 67
    column               go to state 68
    name                 go to state 35


State 83

   52 condition_expr_leaf: column YY_GG . expr_float
   58                    | column YY_GG . expr_int
   64                    | column YY_GG . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 111
    expr_int     go to state 112
    expr_string  go to state 113


State 84

   53 condition_expr_leaf: column YY_GE . expr_float
   59                    | column YY_GE . expr_int
   65                    | column YY_GE . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 114
    expr_int     go to state 115
    expr_string  go to state 116


State 85

   55 condition_expr_leaf: column YY_LL . expr_float
   61                    | column YY_LL . expr_int
   67                    | column YY_LL . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 117
    expr_int     go to state 118
    expr_string  go to state 119


State 86

   56 condition_expr_leaf: column YY_LE . expr_float
   62                    | column YY_LE . expr_int
   68                    | column YY_LE . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 120
    expr_int     go to state 121
    expr_string  go to state 122


State 87

   54 condition_expr_leaf: column YY_IS . expr_float
   60                    | column YY_IS . expr_int
   66                    | column YY_IS . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 123
    expr_int     go to state 124
    expr_string  go to state 125


State 88

   57 condition_expr_leaf: column YY_NE . expr_float
   63                    | column YY_NE . expr_int
   69                    | column YY_NE . expr_string

    YY_STRING  shift, and go to state 89
    NUMI       shift, and go to state 90
    NUMF       shift, and go to state 91
    '+'        shift, and go to state 92
    '-'        shift, and go to state 93
    '('        shift, and go to state 94

    expr_float   go to state 126
    expr_int     go to state 127
    expr_string  go to state 128


State 89

   99 expr_string: YY_STRING .

    $default  reduce using rule 99 (expr_string)


State 90

   90 expr_int: NUMI .

    $default  reduce using rule 90 (expr_int)


State 91

   70 expr_float: NUMF .

    $default  reduce using rule 70 (expr_float)


State 92

   85 expr_float: '+' . expr_float
   98 expr_int: '+' . expr_int

    NUMI  shift, and go to state 90
    NUMF  shift, and go to state 91
    '+'   shift, and go to state 92
    '-'   shift, and go to state 93
    '('   shift, and go to state 94

    expr_float  go to state 129
    expr_int    go to state 130


State 93

   84 expr_float: '-' . expr_float
   97 expr_int: '-' . expr_int

    NUMI  shift, and go to state 90
    NUMF  shift, and go to state 91
    '+'   shift, and go to state 92
    '-'   shift, and go to state 93
    '('   shift, and go to state 94

    expr_float  go to state 131
    expr_int    go to state 132


State 94

   83 expr_float: '(' . expr_float ')'
   96 expr_int: '(' . expr_int ')'

    NUMI  shift, and go to state 90
    NUMF  shift, and go to state 91
    '+'   shift, and go to state 92
    '-'   shift, and go to state 93
    '('   shift, and go to state 94

    expr_float  go to state 133
    expr_int    go to state 134


State 95

   27 insert_stmt: INSERT INTO table_name VALUES '(' value_list . ')'
   35 value_list: value_list . ',' expr_int
   36           | value_list . ',' expr_float
   37           | value_list . ',' expr_string

    ','  shift, and go to state 135
    ')'  shift, and go to state 136


State 96

   39 value_list: expr_float .
   71 expr_float: expr_float . '+' expr_float
   72           | expr_float . '+' expr_int
   74           | expr_float . '-' expr_float
   75           | expr_float . '-' expr_int
   77           | expr_float . '*' expr_float
   78           | expr_float . '*' expr_int
   80           | expr_float . '/' expr_float
   81           | expr_float . '/' expr_int
   86           | expr_float . '^' expr_float
   87           | expr_float . '^' expr_int

    '+'  shift, and go to state 137
    '-'  shift, and go to state 138
    '*'  shift, and go to state 139
    '/'  shift, and go to state 140
    '^'  shift, and go to state 141

    $default  reduce using rule 39 (value_list)


State 97

   38 value_list: expr_int .
   73 expr_float: expr_int . '+' expr_float
   76           | expr_int . '-' expr_float
   79           | expr_int . '*' expr_float
   82           | expr_int . '/' expr_float
   88           | expr_int . '^' expr_float
   89           | expr_int . '^' expr_int
   91 expr_int: expr_int . '+' expr_int
   92         | expr_int . '-' expr_int
   93         | expr_int . '*' expr_int
   94         | expr_int . '/' expr_int
   95         | expr_int . '%' expr_int

    '+'  shift, and go to state 142
    '-'  shift, and go to state 143
    '*'  shift, and go to state 144
    '/'  shift, and go to state 145
    '%'  shift, and go to state 146
    '^'  shift, and go to state 147

    $default  reduce using rule 38 (value_list)


State 98

   40 value_list: expr_string .

    $default  reduce using rule 40 (value_list)


State 99

   28 insert_stmt: INSERT INTO table_name '(' column_list ')' . VALUES '(' value_list ')'

    VALUES  shift, and go to state 148


State 100

   25 select_stmt: SELECT '*' FROM table_name WHERE condition_expr .
   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr

    YY_AND  shift, and go to state 81
    YY_OR   shift, and go to state 82

    $default  reduce using rule 25 (select_stmt)


State 101

   26 select_stmt: SELECT column_list FROM table_name WHERE condition_expr .
   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr

    YY_AND  shift, and go to state 81
    YY_OR   shift, and go to state 82

    $default  reduce using rule 26 (select_stmt)


State 102

   29 update_stmt: UPDATE table_name SET assign_expr_list WHERE condition_expr .
   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr

    YY_AND  shift, and go to state 81
    YY_OR   shift, and go to state 82

    $default  reduce using rule 29 (update_stmt)


State 103

   41 assign_expr_list: assign_expr_list ',' column . '=' expr_float
   42                 | assign_expr_list ',' column . '=' expr_int
   43                 | assign_expr_list ',' column . '=' expr_string

    '='  shift, and go to state 149


State 104

   44 assign_expr_list: column '=' expr_float .
   71 expr_float: expr_float . '+' expr_float
   72           | expr_float . '+' expr_int
   74           | expr_float . '-' expr_float
   75           | expr_float . '-' expr_int
   77           | expr_float . '*' expr_float
   78           | expr_float . '*' expr_int
   80           | expr_float . '/' expr_float
   81           | expr_float . '/' expr_int
   86           | expr_float . '^' expr_float
   87           | expr_float . '^' expr_int

    '+'  shift, and go to state 137
    '-'  shift, and go to state 138
    '*'  shift, and go to state 139
    '/'  shift, and go to state 140
    '^'  shift, and go to state 141

    $default  reduce using rule 44 (assign_expr_list)


State 105

   45 assign_expr_list: column '=' expr_int .
   73 expr_float: expr_int . '+' expr_float
   76           | expr_int . '-' expr_float
   79           | expr_int . '*' expr_float
   82           | expr_int . '/' expr_float
   88           | expr_int . '^' expr_float
   89           | expr_int . '^' expr_int
   91 expr_int: expr_int . '+' expr_int
   92         | expr_int . '-' expr_int
   93         | expr_int . '*' expr_int
   94         | expr_int . '/' expr_int
   95         | expr_int . '%' expr_int

    '+'  shift, and go to state 142
    '-'  shift, and go to state 143
    '*'  shift, and go to state 144
    '/'  shift, and go to state 145
    '%'  shift, and go to state 146
    '^'  shift, and go to state 147

    $default  reduce using rule 45 (assign_expr_list)


State 106

   46 assign_expr_list: column '=' expr_string .

    $default  reduce using rule 46 (assign_expr_list)


State 107

   31 column_type_list: column_type_list ',' column . DATATYPE

    DATATYPE  shift, and go to state 150


State 108

   50 condition_expr: '(' condition_expr ')' .

    $default  reduce using rule 50 (condition_expr)


State 109

   47 condition_expr: condition_expr . YY_AND condition_expr
   47               | condition_expr YY_AND condition_expr .
   48               | condition_expr . YY_OR condition_expr

    $default  reduce using rule 47 (condition_expr)


State 110

   47 condition_expr: condition_expr . YY_AND condition_expr
   48               | condition_expr . YY_OR condition_expr
   48               | condition_expr YY_OR condition_expr .

    $default  reduce using rule 48 (condition_expr)


State 111

   52 condition_expr_leaf: column YY_GG expr_float .
   71 expr_float: expr_float . '+' expr_float
   72           | expr_float . '+' expr_int
   74           | expr_float . '-' expr_float
   75           | expr_float . '-' expr_int
   77           | expr_float . '*' expr_float
   78           | expr_float . '*' expr_int
   80           | expr_float . '/' expr_float
   81           | expr_float . '/' expr_int
   86           | expr_float . '^' expr_float
   87           | expr_float . '^' expr_int

    '+'  shift, and go to state 137
    '-'  shift, and go to state 138
    '*'  shift, and go to state 139
    '/'  shift, and go to state 140
    '^'  shift, and go to state 141

    $default  reduce using rule 52 (condition_expr_leaf)


State 112
